# tkinter-company-manager

./: .gitignore  pyproject.toml
src/: _classes.py  _service.py  _styles.py  companies.py  companies_db.py  connection_types.py  connection_types_db.py  connections.py  connections_db.py  logins.py  logins_db.py  main.py  main_db_sqlite3.py  roles.py  user_roles.py  users.py  users_db.py
