[tool.poetry]
name = "tkinter-company-manager"
version = "0.1.0"
description = ""
authors = ["sazanov.ilya.85 <sazanov.ilya.85@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
